[tool.poetry]
name = "tictactoe_hy2578"
version = "0.1.0"
description = "pkg forfor hw7"
authors = ["Haotian Yang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
